--- a/src/app/division/division.component.html
+++ b/src/app/division/division.component.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
-                <div class="card-header"></div>
+                <div class="card-header">
+
+                </div>
                 <div class="card-body">
                     <table class="table table-head-fixed text-nowrap">
                         <thead>
@@ -12,11 +14,11 @@
                                 <th>Description</th>
                             </tr>
                         </thead>
-                        <tbody *ngFor="let currentDivision of divisions; let i = index"> 
+                        <tbody *ngFor="let currentDivision of divisions; let i = index">
                             <tr>
-                                <td>{{ currentDivision._id }}</td>
-                                <td>{{ currentDivision.name }}</td>
-                                <td>{{ currentDivision.description }}</td>
+                                <td>{{currentDivision._id}}</td>
+                                <td>{{currentDivision.name}}</td>
+                                <td>{{currentDivision.description}}</td>
                             </tr>
                         </tbody>
                     </table>
