--- a/src/app/division/division.component.html
+++ b/src/app/division/division.component.html
@@ -19,6 +19,7 @@
                                 <td>{{currentDivision._id}}</td>
                                 <td>{{currentDivision.name}}</td>
                                 <td>{{currentDivision.description}}</td>
+                                <a href="/divisi" class="btn btn-primary" role="button">Delete</a>
                             </tr>
                         </tbody>
                     </table>
